<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp">

    <ImageView
        android:id="@+id/image"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/inventory_draw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="-7dp"
        android:fontFamily="@font/comforta_bold"
        android:singleLine="true"
        android:text="@string/date"
        android:textColor="@color/black"
        android:textSize="19sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/image"
        app:layout_constraintTop_toTopOf="@id/image" />

    <TextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/comforta_bold"
        android:singleLine="true"
        android:text="11/12/2022"
        android:textColor="@color/dark_blue"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/date_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/date_header"
        app:layout_constraintTop_toTopOf="@id/date_header" />

    <TextView
        android:id="@+id/articles_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/comforta_bold"
        android:singleLine="true"
        android:text="@string/articles_number"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/date_header"
        app:layout_constraintTop_toBottomOf="@id/date_header" />

    <TextView
        android:id="@+id/articles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/comforta_bold"
        android:singleLine="true"
        android:text="20"
        android:textColor="@color/dark_blue"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@id/articles_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/articles_header"
        app:layout_constraintTop_toTopOf="@id/articles_header" />

    <View
        android:id="@+id/div1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="3dp"
        android:background="@color/gray_215_A50"
        app:layout_constraintTop_toBottomOf="@id/image" />

    <TextView
        android:id="@+id/subtotal_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/comforta_semibold"
        android:text="@string/subtotal"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="@id/image"
        app:layout_constraintTop_toBottomOf="@id/div1" />

    <TextView
        android:id="@+id/subtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/comforta_semibold"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="@id/subtotal_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/subtotal_label" />

    <TextView
        android:id="@+id/tax_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/comforta_semibold"
        android:text="@string/tax"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="@id/image"
        app:layout_constraintTop_toBottomOf="@id/subtotal_label" />

    <TextView
        android:id="@+id/tax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/comforta_semibold"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="@id/tax_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tax_label" />

    <TextView
        android:id="@+id/discounts_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/comforta_semibold"
        android:text="@string/discounts"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="@id/image"
        app:layout_constraintTop_toBottomOf="@id/tax_label" />

    <TextView
        android:id="@+id/discounts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/comforta_semibold"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="@id/discounts_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/discounts_label" />


    <TextView
        android:id="@+id/to_pay_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/comforta_semibold"
        android:text="@string/total"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/image"
        app:layout_constraintTop_toBottomOf="@id/discounts_label" />

    <TextView
        android:id="@+id/to_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/comforta_semibold"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/to_pay_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/to_pay_label" />

    <TextView
        android:id="@+id/collected_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/comforta_semibold"
        android:text="@string/paid_out"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/image"
        app:layout_constraintTop_toBottomOf="@id/to_pay_label" />

    <TextView
        android:id="@+id/collected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/comforta_semibold"
        android:textColor="@color/dark_blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/collected_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/collected_label" />

    <TextView
        android:id="@+id/debt_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/comforta_semibold"
        android:text="@string/debt"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/image"
        app:layout_constraintTop_toBottomOf="@id/collected_label" />

    <TextView
        android:id="@+id/debt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/comforta_semibold"
        android:textColor="@color/red"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/debt_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/debt_label" />

    <LinearLayout
        android:id="@+id/pay_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:background="@drawable/white_back_8dp"
        android:backgroundTint="@color/dark_blue"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/ripple_8dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/debt">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collect"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </LinearLayout>


    <View
        android:id="@+id/bottom_div"
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_marginTop="15dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/pay_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>